--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
 annotated-types==0.7.0
 asgiref==3.8.1
+astroid==2.15.8
 black==24.10.0
 click==8.1.7
 Django==5.1.2
 django-ninja==1.3.0
+flake8==6.1.0
+flake8-django==1.4
 gunicorn==23.0.0
 h11==0.14.0
 isort==5.13.2
+lazy-object-proxy==1.10.0
+mccabe==0.7.0
 mypy-extensions==1.0.0
 nanodjango==0.9.2
 packaging==24.1
 pathspec==0.12.1
 platformdirs==4.3.6
+pycodestyle==2.11.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+pyflakes==3.1.0
 sqlparse==0.5.1
 tomli==2.0.2
 typing_extensions==4.12.2
 uvicorn==0.32.0
 whitenoise==6.7.0
+wrapt==1.16.0
